# websocket_chat

./: .gitignore  app.db  client.sh  main.py  pyproject.toml  requirments.txt  server.sh  setup.py  setup.sh  setup_1.sh
auth/: auth.py  mail.py
database/: db.py  model.py
group_chat/: clients_server.py  server_client.py
simple_chat/: chat_client.py  chat_server.py
starters/: client.py  server.py
